cargo_check_final_2.txt
    Checking machine v0.1.0 (/home/feroan/Projects/theMachine/machine)
error[E0432]: unresolved imports `sysinfo::SystemExt`, `sysinfo::CpuExt`
 --> src/core/analysis.rs:1:23
  |
1 | use sysinfo::{System, SystemExt, CpuExt};
  |                       ^^^^^^^^^  ^^^^^^ no `CpuExt` in the root
  |                       |
  |                       no `SystemExt` in the root
  |
help: a similar name exists in the module
  |
1 - use sysinfo::{System, SystemExt, CpuExt};
1 + use sysinfo::{System, System, CpuExt};
  |

error[E0432]: unresolved imports `sysinfo::SystemExt`, `sysinfo::ProcessExt`, `sysinfo::CpuExt`
 --> src/core/proc.rs:1:23
  |
1 | ...tem, SystemExt, ProcessExt, CpuExt};
  |         ^^^^^^^^^  ^^^^^^^^^^  ^^^^^^ no `CpuExt` in the root
  |         |          |
  |         |          no `ProcessExt` in the root
  |         no `SystemExt` in the root
  |
help: a similar name exists in the module
  |
1 - use sysinfo::{System, SystemExt, ProcessExt, CpuExt};
1 + use sysinfo::{System, System, ProcessExt, CpuExt};
  |
help: a similar name exists in the module
  |
1 - use sysinfo::{System, SystemExt, ProcessExt, CpuExt};
1 + use sysinfo::{System, SystemExt, Process, CpuExt};
  |

warning: unused import: `Severity`
 --> src/commands/investigate.rs:3:42
  |
3 | ...dations::{self, Severity};
  |                    ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
  --> src/commands/investigate.rs:13:9
   |
13 |     let mut issues = recommendations::get_r...
   |         ----^^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `machine` (lib) generated 2 warnings
error: could not compile `machine` (lib) due to 2 previous errors; 2 warnings emitted
